# Mycel

./: .gitignore  .htmlvalidate.json  .stylelintrc.json  AGENTS-LOCAL.md  AGENTS.md  BOT-CONTRIBUTING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN-NOTES.canonical-text-profile.en.md  DESIGN-NOTES.client-non-discretionary-multi-view.en.md  DESIGN-NOTES.client-non-discretionary-multi-view.zh-TW.md  DESIGN-NOTES.interpretation-dispute-model.zh-TW.md  DESIGN-NOTES.mycel-anonymity-model.en.md  DESIGN-NOTES.mycel-app-layer.zh-TW.md  DESIGN-NOTES.peer-discovery-model.zh-TW.md  DESIGN-NOTES.peer-simulator-v0.en.md  DESIGN-NOTES.policy-driven-threshold-custody.en.md  DESIGN-NOTES.qa-app-layer.en.md  DESIGN-NOTES.qa-app-layer.zh-TW.md  DESIGN-NOTES.two-maintainer-role.en.md  IMPLEMENTATION-CHECKLIST.en.md  IMPLEMENTATION-CHECKLIST.zh-TW.md  MYCEL-PROJECT-NOTES.md  PROFILE.fund-auto-disbursement-v0.1.en.md  PROFILE.fund-auto-disbursement-v0.1.zh-TW.md  PROFILE.mycel-over-tor-v0.1.zh-TW.md  PROJECT-INTENT.md  PROJECT-INTENT.zh-CN.md  PROJECT-INTENT.zh-TW.md  PROTOCOL.en.md  PROTOCOL.zh-CN.md  PROTOCOL.zh-TW.md  README.md  README.zh-CN.md  README.zh-TW.md  ROADMAP.md  ROADMAP.zh-CN.md  ROADMAP.zh-TW.md  RUST-WORKSPACE.md  (+8 more)
.agent-local/: DEV-SETUP-STATUS.example.md
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
docs/: AGENT-COORDINATION-BLOG-SERIES-DRAFT.md  AGENT-HANDOFF.md  AGENT-LIFECYCLE-STATE-MACHINE.md  AGENT-OSS-LANDSCAPE-COMPARISON.md  AGENT-REGISTRY.md  AI-CO-WORKING-MODEL.md  BOOTSTRAP-TOKEN-ANALYSIS.md  (+33 more)
(+395 files in other folders)
